# avro_macro

./: .gitignore  .gitmodules  Cargo.toml  Test copy.avro  Test.avro  UserCreated.avro  UserUpdated.avro  WishlistWishRemoved.avro  cases  foo.avro  test  test.avro  tmp.rs
examples/: gen.rs  test.rs
src/: lib.rs
