[package]
name = "avro_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = {version = "0.16.0", features = ["derive"] }
derive = "1.0.0"
proc-macro2 = "1.0.80"
quote = "1.0.36"
serde = {version = "1.0.197", features=["derive"] }
syn = { version="2.0.59", features=["full", "extra-traits"]}

[lib]
proc-macro = true
