[package]
name = "avro_macro"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#apache-avro = { version = "0.16.0", features = ["derive"] }
#apache-avro = { path="/Users/mikkel/Development/avro/lang/rust/avro", features = ["derive"] }
apache-avro = { git = "https://github.com/MikkelSnitker/avro.git", features = ["derive"] }


derive = "1.0.0"
glob = "0.3.1"
proc-macro2 = "1.0.80"
quote = "1.0.36"
reqwest = {version = "0.12.4",  features = ["blocking"] }
serde = {version = "1.0.197", features=["derive"] }
serde_json = "1.0.116"
syn = { version="2.0.59", features=["full", "extra-traits"]}

[lib]
proc-macro = true
